<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brain Training</string>
    <string name="menu_settings">Settings</string>
    
    <string name="settings_shortcut">s</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play.</string>
    
    <string name="continue_label">Continue</string>
    <string name="new_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    
    <string name="difficulty_title">Difficulty</string>
    <string name="novice_label">Novice</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="guru_label">Guru</string>
    
    <string name="game_title">Brain Training</string>
	<string name="keypad_title">Keypad</string>
	
	<string name="keypad_0">0</string>
	<string name="keypad_1">1</string>
	<string name="keypad_2">2</string>
	<string name="keypad_3">3</string>
	<string name="keypad_4">4</string>
	<string name="keypad_5">5</string>
	<string name="keypad_6">6</string>
	<string name="keypad_7">7</string>
	<string name="keypad_8">8</string>
	<string name="keypad_9">9</string>
	<string name="keypad_delete">DEL</string>
	<string name="keypad_negative">-</string>
	<string name="keypad_hash">#</string>
    
    <string name="about_title">About</string>
    <string name="about_text">Brain training…</string>

</resources>